--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.QuanLyKhoHang"
         tools:targetApi="31">
         <activity
+            android:name=".Screen.SplashActivity"
+            android:exported="false" />
+        <activity
             android:name=".Screen.RegisterActivity"
             android:exported="false" />
         <activity
